--- a/abouthelen.html
+++ b/abouthelen.html
@@ -148,7 +148,8 @@ pageTracker._trackPageview();
               <p>Helen has been enjoying  teaching so much that in February 2009 she began  studying for the <span class="Text-News">Graduate Diploma In Teaching at the Christchurch Teacher's College. </span></p>
               <p><span class="Text-News">In 2010 Helen was relief teaching in  primary schools and also completed the acclaimed CELTA (Cambridge English Language Teaching for Adults) course.</span></p>
               <p><span class="Text-News">2011: Helen is currently teaching at Hong Kong Academy, an international primary and secondary school in Hong Kong.</span></p>
-              <p>&nbsp;</p>
+              <p><span class="Text-News">Last updated: 2011</span></p>              
+		<p>&nbsp;</p>
               <hr />
               <p>&nbsp;</p>
               <p>&nbsp;</p>
