--- a/thankyou.html
+++ b/thankyou.html
@@ -132,7 +132,7 @@ pageTracker._trackPageview();
    <p>Click here to visit our <a href="sockpuppets.html">Stupid Sock Puppets</a></p>
    <p><BR>
    </p>
-   <div align="center"><span class="quotestart">Sorry about the silly $150 ad. I can't get rid of this.</span></div>
+   <div align="center"><span class="style6">     </span></div>
    <noframes><p><a href="http://www.freegb.net/gbook/helen">Click here</a> to see the guestbook.</p></noframes>
    <iframe src="http://www.freegb.net/gbook/Helen" width="700" height="3000" frameborder="0"></iframe>    
         
