--- a/HelensLinks.htm
+++ b/HelensLinks.htm
@@ -2,7 +2,8 @@
 
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 14 (filtered)">
+<meta name=Generator content="Microsoft Word 14 (filtered)"
+<META NAME="robots" CONTENT="noindex,nofollow">
 <style>
 <!--
  /* Font Definitions */
@@ -145,7 +146,7 @@ color:#222222'>&nbsp;</span></p>
   <p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
   text-align:center'><span lang=EN-US style='font-size:14.0pt'><a
   href="https://photos.app.goo.gl/0eihhghGFPon3An32"><span style='font-size:
-  11.0pt'>Events – Art Show <br>
+  11.0pt'>Events â€“ Art Show <br>
   &amp; Concert</span></a></span></p>
   </td>
   <td width=130 valign=top style='width:97.8pt;padding:0cm 5.4pt 0cm 5.4pt;
@@ -164,7 +165,7 @@ color:#222222'>&nbsp;</span></p>
   <p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
   text-align:center'><span lang=EN-US style='font-size:4.0pt'>&nbsp;</span></p>
   <p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-  text-align:center'><span lang=EN-US>Helen’s Website<br>
+  text-align:center'><span lang=EN-US>Helenâ€™s Website<br>
   <a href="http://www.creativekids.co.nz/"><span style='font-size:9.0pt'>www.creativekids.co.nz</span></a><br>
   </span><span lang=EN-US style='font-size:9.0pt'>(archives)</span></p>
   </td>
@@ -173,7 +174,7 @@ color:#222222'>&nbsp;</span></p>
   <td width=130 style='width:97.8pt;padding:0cm 5.4pt 0cm 5.4pt;height:32.95pt'>
   <p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
   text-align:center'><span lang=EN-US><a
-  href="https://creativekidsnz.github.io/HelensArt/index.htm">Helen’s Art Work</a><br>
+  href="https://creativekidsnz.github.io/HelensArt/index.htm">Helenâ€™s Art Work</a><br>
   </span><span lang=EN-US style='font-size:9.0pt'>(archives)</span></p>
   </td>
  </tr>
