--- a/abouthelen.html
+++ b/abouthelen.html
@@ -147,9 +147,11 @@ pageTracker._trackPageview();
               <p>By 2008 this had evolved into teaching 5-6 art classes each week in the school term, plus several  classes each school holidays.</p>
               <p>Helen has been enjoying  teaching so much that in February 2009 she began  studying for the <span class="Text-News">Graduate Diploma In Teaching at the Christchurch Teacher's College. </span></p>
               <p><span class="Text-News">In 2010 Helen was relief teaching in  primary schools and also completed the acclaimed CELTA (Cambridge English Language Teaching for Adults) course.</span></p>
-              <p><span class="Text-News">2011: Helen is currently teaching at Hong Kong Academy, an international primary and secondary school in Hong Kong.</span></p>
-              <p><span class="Text-News">Last updated: 2011</span></p>              
+              <p><span class="Text-News">2011: Helen taught at Hong Kong Academy, an international primary and secondary school in Hong Kong.</span></p>
+              <p><span class="Text-News">2014: Shifting to Shanghai and Yew Chung International School, Helen taught primary school art for 4 years in a multi-cultural setting.</span></p>      
+		<p><span class="Text-News">July 2018: Returning to New Zealand.</span></p>
 		<p>&nbsp;</p>
+		<p><span class="Text-News">Last updated: 2011</span></p>      
               <hr />
               <p>&nbsp;</p>
               <p>&nbsp;</p>
