--- a/abouthelen.html
+++ b/abouthelen.html
@@ -147,7 +147,7 @@ pageTracker._trackPageview();
               <p>By 2008 this had evolved into teaching 5-6 art classes each week in the school term, plus several  classes each school holidays.</p>
               <p>Helen has been enjoying  teaching so much that in February 2009 she began  studying for the <span class="Text-News">Graduate Diploma In Teaching at the Christchurch Teacher's College. </span></p>
               <p><span class="Text-News">In 2010 Helen was relief teaching in  primary schools and also completed the acclaimed CELTA (Cambridge English Language Teaching for Adults) course.</span></p>
-              <p><span class="Text-News">2011: Helen taught at Hong Kong Academy, an international primary and secondary school in Hong Kong.</span></p>
+              <p><span class="Text-News">2011: Helen taught at Hong Kong Academy, a private international primary and secondary school in Hong Kong.</span></p>
               <p><span class="Text-News">2014: Art teacher at Yew Chung International School - an English language private school in Shanghai, China. Helen taught primary school art for 4 years in a multi-cultural setting with 14-17 classes per week.</span></p>      
 		<p><span class="Text-News">July 2018: Returned to New Zealand and living in Raumati, Paraparaumu, on the Kapiti coast.</span></p>
 		<p>&nbsp;</p>
