--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ pageTracker._trackPageview();
             </tr>
             <tr>
               <td valign=top height=40><div id=rpadding align=right>
-                  <div align=left class=style3>CHRISTCHURCH,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;<span class="style6"><strong>CLOSED&nbsp; FOR&nbsp; 2014</strong></span></div>
+                  <div align=left class=style3>RAUMATI SOUTH,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;</div>
                 </div></td>
             </tr>
           </tbody>
@@ -138,10 +138,12 @@ pageTracker._trackPageview();
 					</tr>
 					<tr>
 						<td background="images/left-edge5.png" bgcolor="#ffffff" id="main" rowspan="9" valign="top" width="60%">
-						<p><span class="style8"><span style="color:#FF0000;"><strong><span class="style12">CLOSED</span></strong></span></span></p>
-
-						<p><span class="style8"><strong>2nd February 2011:&nbsp;</strong> </span><span class="style13">Classes are not currently operating in Christchurch.</span></p>
-
+						<p><strong><span style="color: rgb(44, 130, 201);"><span style="font-size: 24px;">NEW OPENING! :</span></span><span style="font-size: 24px;"><span style="color: rgb(44, 130, 201);">&nbsp;</span>April 2019</span></strong><span style="font-size: 24px;">&nbsp;- <em>Art&nbsp;</em></span><em><span style="font-size: 24px;">Holiday Programme &amp; Term Classes</span></em></p>
+                				<p>I have relocated to South Raumati, Paraparaumu on the Kapiti coast.</p>
+                				<p>Art classes will be opening soon!&nbsp;</p>
+                				<p><strong>Please <a href="mailto:helen@creativekids.co.nz">email</a> or phone me</strong> (04-297-9277/022-505-4058) so that I can keep you in touch with what is happening. Classes will operate from my home at 6 Rainbow Court, Raumati South.</p>
+                				<p><strong>About Helen:&nbsp;</strong>I&#39;m a New Zealand registered primary teacher with 7 years teaching in international private schools. For the last 4 years I have been teaching art with 14-17 classes of eager students a week. I also
+                    					have lots of experience running children&#39;s holiday programmes (<a href="https://www.froala.com/abouthelen.html">Detailed Bio</a>).</p>
 						<hr />
 						<p class="Text"></p>
 
@@ -157,7 +159,7 @@ pageTracker._trackPageview();
 						<p align="center" class="Text"><strong><strong><span class="Text-Red"><em>&quot;As a parent my satisfaction is high.<br />
 						I would rate the standard of teaching as 10 out of 10.&quot;</em></span></strong></strong></p>
 
-						<p class="Text"><strong>Cost: </strong>The course fee of <em><strong>$165</strong></em> (per 9 classes in a term) covers all materials, afternoon tea and art shirts. <em>Children can join a class during the term <em>at a reduced cost i</em>f there are spaces available.</em></p>
+						<p class="Text"><strong>Cost: </strong>The course fee of <em><strong>$ &quot;</strong></em> (per 9 classes in a term) covers all materials, afternoon tea and art shirts. <em>Children can join a class during the term <em>at a reduced cost i</em>f there are spaces available.</em></p>
 
 						<p class="Text"><strong>Holiday Classes, Visiting Artist or Adult Classes: </strong><a href="classes.html#visiting">Click here</a> for more information.</p>
 
@@ -175,23 +177,10 @@ pageTracker._trackPageview();
 						<hr />
 						<p align="left" class="Text"><strong><span style="color:#FF0000;">CLOSED</span> Booking Now: </strong>Some classes are full before the term starts. This varies each term, so I suggest you book in as soon as possible.</p>
 
-						<p align="left" class="Text">Currently I teach these classes at COCA and bookings can be made directly with the COCA reception:</p>
-
-						<blockquote>
-						<p class="Text"><strong>The Centre Of Contemporary Art</strong> (COCA)<br />
-						66 Gloucester Street<br />
-						Christchurch<br />
-						Phone : <strong>366-7261</strong><br />
-						Email : <a href="mailto:reception@coca.org.nz">reception@coca.org.nz</a></p>
-						</blockquote>
+						
 
 						<p class="Text"><strong>More Info: </strong>If you would like to talk to me about the classes I can be contacted at home:</p>
 
-						<p class="Text">Phone Helen : <strong>980-3306 </strong>or write down this email...</p>
-
-						<blockquote>
-						<p class="Text"><img alt="email address is &quot;helen&quot; at creative kids" border="0" height="22" src="images/helen-email-blue.png" width="182" /></p>
-						</blockquote>
 
 						<p class="Text">Interested in <strong>Volunteering? </strong><a href="volunteering.html">Click Here</a></p>
 
