--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ pageTracker._trackPageview();
 					<tr>
 						<td background="images/red_grad_bk3.png" height="40" id="lpadding" valign="middle" width="60%"><span class="Headings">WELCOME</span></td>
 						<td align="center" background="images/red_grad_bk3.png" height="40" valign="center"></td>
-						<td background="images/red_grad_bk3.png" valign="middle" width="226"><span class="Headings">ART CLASSES&nbsp; (Closed)</span></td>
+						<td background="images/red_grad_bk3.png" valign="middle" width="226"><span class="Headings">ART CLASSES&nbsp;</span></td>
 					</tr>
 					<tr>
 						<td background="images/left-edge5.png" bgcolor="#ffffff" id="main" rowspan="9" valign="top" width="60%">
@@ -175,7 +175,7 @@ pageTracker._trackPageview();
 						<p align="left" class="Text"></p>
 
 						<hr />
-						<p align="left" class="Text"><strong><span style="color:#FF0000;">CLOSED</span> Booking Now: </strong>Some classes are full before the term starts. This varies each term, so I suggest you book in as soon as possible.</p>
+						<p align="left" class="Text"><strong><span style="color:#FF0000;"></span> Booking Now: </strong>Some classes are full before the term starts. This varies each term, so I suggest you book in as soon as possible.</p>
 
 						
 
