--- a/booking.html
+++ b/booking.html
@@ -117,13 +117,11 @@ pageTracker._trackPageview();
             <td width="64%" valign="top" bgcolor="#FFFFFF" class="padding"><blockquote>
               <p class="Text">&nbsp;</p>
               <hr>
-              <p class="Text"><strong>26th January 2009</strong> -  I am no longer teaching term art classes at COCA. More details <a href="news.html">click here</a>.</p>
-              <hr>
                 <p class=Text>&nbsp;</p>
                 <p class=Text><strong><em><span class="style7"><strong>For More Info: </strong></span></em></strong><em><em>If you would like to talk 
                 to me about the classes I can be contacted at home...</em></em></p>
                 <blockquote>
-                  <p class="Text">Phone <strong>980-3306 </strong>or click on this email...<script language=javascript>
+                  <p class="Text">Phone <strong>04-297-9277 </strong>or email me at <a href="mailto:helen@creativekids.co.nz">helen@creativekids.co.nz</a>
   <!--
   var email = "helen"
   var emailHost = "creativekids"
