--- a/booking.html
+++ b/booking.html
@@ -52,7 +52,7 @@ pageTracker._trackPageview();
             </tr>
             <tr>
               <td valign=top height=40><div id=rpadding align=right>
-                  <div align=left class=style3>CHRISTCHURCH,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;<span class="style6"><strong>CLOSED&nbsp; FOR&nbsp; 2014</strong></span></div>
+                  <div align=left class=style3>RAUMATI SOUTH,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;</div>
                 </div></td>
             </tr>
           </tbody>
