--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ pageTracker._trackPageview();
 						<p><strong><span style="color: rgb(44, 130, 201);"><span style="font-size: 24px;">NEW OPENING! :</span></span><span style="font-size: 24px;"><span style="color: rgb(44, 130, 201);">&nbsp;</span>April 2019</span></strong><span style="font-size: 24px;">&nbsp;- <em>Art&nbsp;</em></span><em><span style="font-size: 24px;">Holiday Programme &amp; Term Classes</span></em></p>
                 				<p>I have relocated to South Raumati, Paraparaumu on the Kapiti coast.</p>
                 				<p>Art classes will be opening soon!&nbsp;</p>
-                				<p><strong>Please <a href="mailto:helen@creativekids.co.nz">email</a> or phone me</strong> (04-297-9277/022-505-4058) so that I can keep you in touch with what is happening. Classes will operate from my home at 6 Rainbow Court, Raumati South.</p>
+                				<p><strong>Please <a href="mailto:helen@creativekids.co.nz">email</a> or phone me</strong> (04-297-9277 / 022-505-4058) so that I can keep you in touch with what is happening. Classes will operate from my home at 6 Rainbow Court, Raumati South.</p>
                 				<p><strong>About Helen:&nbsp;</strong>I&#39;m a New Zealand registered primary teacher with 7 years teaching in international private schools. For the last 4 years I have been teaching art with 14-17 classes of eager students a week. I also
                     					have lots of experience running children&#39;s holiday programmes (<a href="https://www.froala.com/abouthelen.html">Detailed Bio</a>).</p>
 						<hr />
