--- a/classes.html
+++ b/classes.html
@@ -126,7 +126,6 @@ pageTracker._trackPageview();
                 <blockquote>
                   <p align="center" class="Text-Red"><em><span class="Text"><span class=quotestart><em>KiwiSport Holiday Programme Supervisor:</em></span><em><br />
                   </em></span>&quot;Never before in the history of KiwiSport have I seen the kids so engaged <em>for 3 hours </em>in an art activity!&quot;</em></p>
-                  <p class="Text"><a href="jan.html">Click here for the January 2010 programme</a></p>
                 </blockquote>
                 <p class="Text">&nbsp;</p>
                 <p class="Text"><span><strong><a name="visiting"></a><span class="style13">Other Visiting Artist Classes</span></strong></span><br />
@@ -143,11 +142,11 @@ pageTracker._trackPageview();
                 </blockquote>
                 <p>&nbsp;</p>
                 <p><strong><a name="term"></a><span class="Text"><span class="style12"><span class="style13"><strong>9 Week Term Art Classes</strong></span></span></span></strong></p>
-                <p><strong><span class="Text"><strong>As of 26th January 2009</strong> </span></strong><span class="Text">-  I am no longer teaching term art classes at COCA. More details <a href="news.html">click here</a>.</span></p>
+                
                 <p class="Text"><br />
                 </p>
                 <p class="Text"><span class="style13"><strong>School Holiday (Boutique) Art Classes</strong><br />
-                    <em>I  provide  morning (9.30am-12noon) and afternoon classes (1.30pm-4.00pm) during one of the weeks of the holidays. Each class has a different focus. Children can enrol for more than one class. There is a maximum of 10 children per class and I cater for ages 5 - 13 years. The cost is $30 per child.</em></span></p>
+                    <em>I  provide  morning (9.30am-12noon) and afternoon classes (1.30pm-4.00pm) during one of the weeks of the holidays. Each class has a different focus. Children can enrol for more than one class. There is a maximum of 10 children per class and I cater for ages 5 - 13 years. The cost is $-- per child.</em></span></p>
                 <blockquote>
                   <p class="Text style13">I am currently  not running these classes. Instead I am providing visiting artists art classes to holiday programmes&nbsp; (see below).</p>
                   <p>&nbsp;</p>
@@ -162,7 +161,7 @@ pageTracker._trackPageview();
                 <p><a href="booking.html"><strong>Contact Helen</strong></a> for more details.                </p>
                 <p>&nbsp;</p>
                 <p><a name="costing"></a><strong class="style13">Cost</strong><br />
-                <em class="Text">The cost of the <strong>Visiting Artist Classes</strong> vary depending on the art content, duration and the number of children. To give you a ball-park figure one class of 2 hours  might cost $190 for the teaching / preparation, plus $1 - $3 per child for materials.</em></p>
+                <em class="Text">The cost of the <strong>Visiting Artist Classes</strong> vary depending on the art content, duration and the number of children. To give you a ball-park figure one class of 2 hours  might cost $-- for the teaching / preparation, plus $- - $- per child for materials.</em></p>
                 <p><em class="Text">(Teaching / preparation includes use of my tools &amp; resources, travel, preparation &amp; purchase of materials, setup &amp; cleanup, administration &amp; planning).</em></p>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
