--- a/classes.html
+++ b/classes.html
@@ -155,7 +155,7 @@ pageTracker._trackPageview();
                 <em>Previously I have taught teachers through teaching their class of children. Teachers report being inspired to teach these classes themselves and have been surprised at how much the children have achieved in a two-hour class.</em></span></p>
           <ul>
                   <li class="Text">For example: Clay is a good topic as the materials are cheap and there are three simple principles that can make for a successful class.</li>
-                  <li class="Text">Classes can be taught at the school or by visiting my classroom (at COCA)</li>
+                  <li class="Text">Classes can be taught at the school or by visiting my classroom</li>
                 </ul>
                 <p>&nbsp; </p>
                 <p><a href="booking.html"><strong>Contact Helen</strong></a> for more details.                </p>
