--- a/jan.html
+++ b/jan.html
@@ -140,8 +140,11 @@ pageTracker._trackPageview();
             <div align="center"></div></td>
             <td width="67%" bgcolor="#FFFFFF"><blockquote>
               <p class="Text">&nbsp;</p>
-              <p class="Text-Red">FULLY BOOKED FOR JANUARY 2010</p>
-              <p>I am an experienced art teacher offering to visit your programme and teach a <strong>two hour art activity</strong> to your whole group.</p>
+              <p class="Text-Red">UPDATE FOR 2019 COMING SOON</p>
+              <p class="Text">&nbsp;</p>
+	     <p class="Text-Red">FULLY BOOKED FOR JANUARY 2010</p>
+              <p class="Text-Red">UPDATE FOR 2019 COMING SOON</p>
+		<p>I am an experienced art teacher offering to visit your programme and teach a <strong>two hour art activity</strong> to your whole group.</p>
               <p class="Text"><span style="font-size:14.0pt;mso-bidi-font-size:12.0pt;
 font-family:Corbel"><a name="activities"></a>You can choose one of:
                     <o:p></o:p>
