--- a/jan.html
+++ b/jan.html
@@ -107,8 +107,7 @@ pageTracker._trackPageview();
               <td width="34%"><div align=center></div></td>
               <td width="12%"><div align=center></div></td>
               <td width="17%"><div align=center></div></td>
-              <td width="18%"><div align=center class="black Title3"><strong>January Holidays<br>
-2010</strong></div></td>
+              <td width="18%"><div align=center class="black Title3"><strong>January Holidays<br></strong></div></td>
               <td width="14%"><div align=center></div></td>
             </tr>
           </tbody>
