--- a/classes.html
+++ b/classes.html
@@ -127,7 +127,9 @@ pageTracker._trackPageview();
                   <p align="center" class="Text-Red"><em><span class="Text"><span class=quotestart><em>KiwiSport Holiday Programme Supervisor:</em></span><em><br />
                   </em></span>&quot;Never before in the history of KiwiSport have I seen the kids so engaged <em>for 3 hours </em>in an art activity!&quot;</em></p>
                 </blockquote>
-                <p class="Text">&nbsp;</p>
+                <a href="#term"><a href="jan.html">January School Holidays</a>
+                  <p class="Text">&nbsp;</p>
+                  <p class="Text">&nbsp;</p>
                 <p class="Text"><span><strong><a name="visiting"></a><span class="style13">Other Visiting Artist Classes</span></strong></span><br />
                   <em>These are often single classes of 2 hours duration where I visit you to facilitate an art class. All materials are provided. <em>(These classes have a teaching / preparation cost plus so much per person for materials).</em></em></p>
                 <blockquote>
