--- a/classes.html
+++ b/classes.html
@@ -144,7 +144,8 @@ pageTracker._trackPageview();
                 </blockquote>
                 <p>&nbsp;</p>
                 <p><strong><a name="term"></a><span class="Text"><span class="style12"><span class="style13"><strong>9 Week Term Art Classes</strong></span></span></span></strong></p>
-                
+                  <p class="Text style13">Each class is for 2 hours.</p>
+                  <p>&nbsp;</p>                
                 <p class="Text"><br />
                 </p>
                 <p class="Text"><span class="style13"><strong>School Holiday (Boutique) Art Classes</strong><br />
