--- a/booking.html
+++ b/booking.html
@@ -121,7 +121,7 @@ pageTracker._trackPageview();
                 <p class=Text><strong><em><span class="style7"><strong>For More Info: </strong></span></em></strong><em><em>If you would like to talk 
                 to me about the classes I can be contacted at home...</em></em></p>
                 <blockquote>
-                  <p class="Text">Phone <strong>04-297-9277 </strong>or email me at <a href="mailto:helen@creativekids.co.nz">helen@creativekids.co.nz</a>
+                  <p class="Text">Phone <strong>04-297-9277 (022-505-4058)</strong>or email me at <a href="mailto:helen@creativekids.co.nz">helen@creativekids.co.nz</a>
 
                     <br>
                </p>
