--- a/philosophy.html
+++ b/philosophy.html
@@ -94,11 +94,11 @@ pageTracker._trackPageview();
         <!-- InstanceBeginEditable name="photo banner" --><table width="100%" height=165 border=0 cellpadding=0 cellspacing=0 background="images/background.png" bgcolor=#be5714>
           <tbody>
             <tr>
-              <td width="13%"><div align=center><img src="images/art-mirror-paint-tran.gif" alt="art, Creative Kids -art classes with Helen Savage, Christchurch, nz" width="99" height="142" />
+              <td width="13%"><div align=center><img src="images/art-mirror-paint-tran.gif" alt="art, Creative Kids -art classes with Helen Savage, Raumati South, Pararparumu, nz" width="99" height="142" />
               </div></td>
-              <td width="22%"><div align=center><img src="images/art-loopy-lines.png" alt="art loopy line, Creative Kids -art classes with Helen Savage, Christchurch, nz" width="170" height="126" border="3" />
+              <td width="22%"><div align=center><img src="images/art-loopy-lines.png" alt="art loopy line, Creative Kids -art classes with Helen Savage, Raumati South, Pararparumu, nz" width="170" height="126" border="3" />
               </div></td>
-              <td width="25%"><div align=center><img src="images/twist.jpg" alt="art-twist, Creative Kids -art classes with Helen Savage, Christchurch, nz" width="182" height="112" border="3" />
+              <td width="25%"><div align=center><img src="images/twist.jpg" alt="art-twist, Creative Kids -art classes with Helen Savage, Raumati South, Pararparumu, nz" width="182" height="112" border="3" />
               </div></td>
               <td width="9%"><div align=center src=""></div></td>
               <td width="32%"><div align=center class="Title3 black">
