--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
 <meta http-equiv=Content-Type content="text/html; charset=iso-8859-1" />
 <meta name="verify-v1" content="xDxxOc5PC+EeHD58cdmCeI94AbTkTEQ76XUw/1sB9Vg=" /> <!-- Google -->
 <meta content="Art Class Classes Helen Savage creative kids holiday programme adult children after school drawing painting printing sculpture design creativity fun" name=Keywords />
-<meta http-equiv=Description content="Creative Kids: I teach multi-media art classes after school every term of the school year and school holidays. These classes cater for students from 5 - 13 years and cover a broad range of art practices in 2D and 3D. - Helen Savage. Located in Christchurch, New Zealand" />
+<meta http-equiv=Description content="Creative Kids: I teach multi-media art classes after school every term of the school year and school holidays. These classes cater for students from 5 - 13 years and cover a broad range of art practices in 2D and 3D. - Helen Savage. Located in Raumati South, New Zealand" />
 
 <link href="main.css" rel="stylesheet" type="text/css">
 <meta content="MSHTML 6.00.2900.3268" name=GENERATOR />
@@ -52,7 +52,7 @@ pageTracker._trackPageview();
             </tr>
             <tr>
               <td valign=top height=40><div id=rpadding align=right>
-                  <div align=left class=style3>CHRISTCHURCH,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;<span class="style6"><strong>CLOSED&nbsp; FOR&nbsp; 2014</strong></span></div>
+                  <div align=left class=style3>SOUTH RAUMATI, KAPITI COAST,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;div>
                 </div></td>
             </tr>
           </tbody>
@@ -117,6 +117,12 @@ pageTracker._trackPageview();
         <table width="100%" border="0" cellspacing="0">
           <tr>
             <td width="60%" valign="top" bgcolor="#FFFFFF" class="padding"><p><strong><u>NEWS</u></strong></p>
+              <p class="Text-News"><em><strong>April 2019</strong></em><br>
+              Children's art classes due to open. Please <a href="abouthelen.html">phone or email me.</a></<p>
+              <p class="Text-News"><em><strong>August 2018</strong></em><br>
+              Returning to NZ after 4 years teaching primary school art full-time. Wow, what a blast that was!<br> Settling in South Raumati, Paraparaumu, New Zealand.</p>
+              <p class="Text-News"><em><strong>August 2014</strong></em><br>
+              I have a contract to teach primary school art at a top private international school in Shanghai, China - Yew Chung International School of Shanghai. I'll be delivering seventeen classes a week for UK K4 to Year 3  (4-8 years old).</p>
               <p class="Text-News"><em><strong>3rd July 2012</strong></em><br>
               Currently teaching at the international school : Hong Kong Academy, Hong Kong</p>
               <p class="Text-News"><em><strong>12th October 2009</strong></em><br>
@@ -175,7 +181,7 @@ pageTracker._trackPageview();
         <!-- InstanceEndEditable -->
         
         <table width="100%" border="0" height=40 valign=middle background="images/bot-strip.png">
-  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Christchurch, NZ</span> </div></td>
+  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Raumati South, Kapiti Coast, NZ</span> </div></td>
   				</table>
 
       <td valign=top width=30><img height=405 alt=background 
