--- a/news.html
+++ b/news.html
@@ -181,7 +181,7 @@ pageTracker._trackPageview();
         <!-- InstanceEndEditable -->
         
         <table width="100%" border="0" height=40 valign=middle background="images/bot-strip.png">
-  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Raumati South, Kapiti Coast, NZ</span> </td>
+  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Raumati South, Kapiti Coast</span> </td>
   				</table>
 
       <td valign=top width=30><img height=405 alt=background 
