--- a/news.html
+++ b/news.html
@@ -52,7 +52,7 @@ pageTracker._trackPageview();
             </tr>
             <tr>
               <td valign=top height=40><div id=rpadding align=right>
-                  <div align=left class=style3>SOUTH RAUMATI, KAPITI COAST,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;div>
+                  <div align=left class=style3>SOUTH RAUMATI, KAPITI COAST<span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;
                 </div></td>
             </tr>
           </tbody>
@@ -181,7 +181,7 @@ pageTracker._trackPageview();
         <!-- InstanceEndEditable -->
         
         <table width="100%" border="0" height=40 valign=middle background="images/bot-strip.png">
-  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Raumati South, Kapiti Coast</span> </td>
+  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Raumati South, Kapiti Coast, NZ</span> </td>
   				</table>
 
       <td valign=top width=30><img height=405 alt=background 
