--- a/thankyou.html
+++ b/thankyou.html
@@ -7,7 +7,7 @@
 <meta http-equiv=Content-Type content="text/html; charset=iso-8859-1" />
 <meta name="verify-v1" content="xDxxOc5PC+EeHD58cdmCeI94AbTkTEQ76XUw/1sB9Vg=" /> <!-- Google -->
 <meta content="Art Class Classes Helen Savage creative kids holiday programme adult children after school drawing painting printing sculpture design creativity fun" name=Keywords />
-<meta http-equiv=Description content="Creative Kids: I teach multi-media art classes after school every term of the school year and school holidays. These classes cater for students from 5 - 13 years and cover a broad range of art practices in 2D and 3D. - Helen Savage. Located in Christchurch, New Zealand" />
+<meta http-equiv=Description content="Creative Kids: I teach multi-media art classes after school every term of the school year and school holidays. These classes cater for students from 5 - 13 years and cover a broad range of art practices in 2D and 3D. - Helen Savage. Located in Raumati South, New Zealand" />
 
 <link href="main.css" rel="stylesheet" type="text/css">
 <meta content="MSHTML 6.00.2900.3268" name=GENERATOR />
@@ -51,7 +51,7 @@ pageTracker._trackPageview();
             </tr>
             <tr>
               <td valign=top height=40><div id=rpadding align=right>
-                  <div align=left class=style3>CHRISTCHURCH,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;<span class="style6"><strong>CLOSED&nbsp; FOR&nbsp; 2014</strong></span></div>
+                  <div align=left class=style3>RAUMATI SOUTH, KAPITI COAST</SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;</div>
                 </div></td>
             </tr>
           </tbody>
@@ -119,7 +119,7 @@ pageTracker._trackPageview();
  <div align="center">
    <p><br>
          <strong class="Title3">Helen's Guestbook   </strong></p>
-   <p><span class="spacing"><strong>I have loved teaching you this year and<BR>
+   <p><span class="spacing"><strong>Guestbook Closed<p></p>I have loved teaching you this year and<BR>
      I have really   enjoyed how much you have enjoyed the art classes <IMG src="http://images.bravenet.com/common/images/smilies/2_smile.gif"> !<BR>
      Hopefully we will meet again. <IMG alt="" src="http://images.bravenet.com/common/images/smilies/28_spin.gif" border="0"><BR>
      Maybe at school or on a holiday programme, somewhere, sometime <IMG src="http://images.bravenet.com/common/images/smilies/4_wink.gif">.</strong><BR>
@@ -142,7 +142,7 @@ pageTracker._trackPageview();
         <!-- InstanceEndEditable -->
         
         <table width="100%" border="0" height=40 valign=middle background="images/bot-strip.png">
-  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Christchurch, NZ</span> </div></td>
+  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Raumati South, Kapiti Coast, NZ</span> </div></td>
   				</table>
 
       <td valign=top width=30><img height=405 alt=background 
