--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
 <meta http-equiv=Content-Type content="text/html; charset=iso-8859-1" />
 <meta name="verify-v1" content="xDxxOc5PC+EeHD58cdmCeI94AbTkTEQ76XUw/1sB9Vg=" /> <!-- Google -->
 <meta content="Art Class Classes Helen Savage creative kids holiday programme adult children after school drawing painting printing sculpture design creativity fun" name=Keywords />
-<meta http-equiv=Description content="Creative Kids: I teach multi-media art classes after school every term of the school year and school holidays. These classes cater for students from 5 - 13 years and cover a broad range of art practices in 2D and 3D. - Helen Savage. Located in Christchurch, New Zealand" />
+<meta http-equiv=Description content="Creative Kids: I teach multi-media art classes after school every term of the school year and school holidays. These classes cater for students from 5 - 13 years and cover a broad range of art practices in 2D and 3D. - Helen Savage. Located in Raumati South, Kapiti Coast" />
 
 <link href="main.css" rel="stylesheet" type="text/css">
 <meta content="MSHTML 6.00.2900.3268" name=GENERATOR />
@@ -42,7 +42,7 @@ pageTracker._trackPageview();
             </tr>
             <tr>
               <td valign=top height=40><div id=rpadding align=right>
-                  <div align=left class=style3>CHRISTCHURCH,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;<span class="style6"><strong>CLOSED&nbsp; FOR&nbsp; 2014</strong></span></div>
+                  <div align=left class=style3>RAUMATI SOUTH, KAPITI COASTdiv>
                 </div></td>
             </tr>
           </tbody>
@@ -155,7 +155,7 @@ pageTracker._trackPageview();
         <!-- InstanceEndEditable -->
         
         <table width="100%" border="0" height=40 valign=middle background="images/bot-strip.png">
-  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Christchurch, NZ</span> </div></td>
+  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Raumati South, NZ</span> </div></td>
   				</table>
 
       <td valign=top width=30><img height=405 alt=background 
