--- a/resources.html
+++ b/resources.html
@@ -42,7 +42,7 @@ pageTracker._trackPageview();
             </tr>
             <tr>
               <td valign=top height=40><div id=rpadding align=right>
-                  <div align=left class=style3>RAUMATI SOUTH, KAPITI COASTdiv>
+                  <div align=left class=style3>RAUMATI SOUTH, KAPITI COAST
                 </div></td>
             </tr>
           </tbody>
