--- a/resources.html
+++ b/resources.html
@@ -123,6 +123,20 @@ pageTracker._trackPageview();
           </tr>
           <tr>
             <td bgcolor="#FFFFFF"><blockquote>
+                <p ><strong><u>Art Resources for Children</u></strong></p>
+                <ul>
+                  <li class="Text"><strong>COCA Art Classes</strong><br />
+                  They continue to run classes at COCA gallery for children. Phone 03-366 7261.</li>
+                  <li class="Text"><strong>Creative Junk</strong><br />
+                  Creative Junk  is a non-profit organisation that  collects recyclable products from  all over the city and takes it all to  their premises at 25 Disraeli Street, Addington, Christchurch.  It is a great resource for contruction and art resources for children. They have paper, card, plastic containers, fabric and bits &amp; pieces of all kinds. Creative Junk is open to the  public and has a membership  system. You can go along and fill  up a bag for $5 for non-members  or $4 for members. Their hours are Wednesday, Thursday, Friday 11.00am to 5.00pm and Saturdays 10.00am to 1.00pm. Phone 379 4040 for information.</li>
+                  <li class="Text"><a href="http://treasuretrovetrust.co.nz/"><strong>Treasure Trove Trust</strong></a>&nbsp; <span class="quotestart">(Located with Creative Junk)</span><br />
+                  The Treasure Trove Trust is an organization that hires out play resources, mainly to after school and holiday programmes, but also to families and individuals. They  have a membership system and are also located at 25 Disraeli Street, Addington. Phone 379-7872 or <a href="http://treasuretrovetrust.co.nz/">click here</a></li>
+                  <li class="Text"><a href="http://floyds.co.nz/">Floyds Creative Arts</a><br>
+                    They have a kiln which is great for getting our clay fired.<br>
+                  </li>
+                </ul>
+              </blockquote>              
+              <blockquote>
               <p><strong><u>Other Art Resources in Christchurch</u></strong></p>
                 <ul>
                   <li class="Text"><a href="http://www.artists.co.nz/"><strong>FUSE - <strong>Art Business Initiative Ltd</strong></strong></a><br />
