--- a/resources.html
+++ b/resources.html
@@ -106,17 +106,11 @@ pageTracker._trackPageview();
           <tr>
             <td width="61%" bgcolor="#FFFFFF"><p>&nbsp;</p>
               <blockquote>
-                <p ><strong><u>Art Resources for Children</u></strong></p>
+                <p ><strong><u>Art Resources for Children on the Kapiti Coast</u></strong></p>
                 <ul>
-                  <li class="Text"><strong>COCA Art Classes</strong><br />
-                  They continue to run classes at COCA gallery for children. Phone 03-366 7261.</li>
-                  <li class="Text"><strong>Creative Junk</strong><br />
-                  Creative Junk  is a non-profit organisation that  collects recyclable products from  all over the city and takes it all to  their premises at 25 Disraeli Street, Addington, Christchurch.  It is a great resource for contruction and art resources for children. They have paper, card, plastic containers, fabric and bits &amp; pieces of all kinds. Creative Junk is open to the  public and has a membership  system. You can go along and fill  up a bag for $5 for non-members  or $4 for members. Their hours are Wednesday, Thursday, Friday 11.00am to 5.00pm and Saturdays 10.00am to 1.00pm. Phone 379 4040 for information.</li>
-                  <li class="Text"><a href="http://treasuretrovetrust.co.nz/"><strong>Treasure Trove Trust</strong></a>&nbsp; <span class="quotestart">(Located with Creative Junk)</span><br />
-                  The Treasure Trove Trust is an organization that hires out play resources, mainly to after school and holiday programmes, but also to families and individuals. They  have a membership system and are also located at 25 Disraeli Street, Addington. Phone 379-7872 or <a href="http://treasuretrovetrust.co.nz/">click here</a></li>
-                  <li class="Text"><a href="http://floyds.co.nz/">Floyds Creative Arts</a><br>
-                    They have a kiln which is great for getting our clay fired.<br>
-                  </li>
+                  <li class="Text"><strong>New</strong><br />
+                  Under Development: As I'm new to the Kapiti Coast I will be updating this as I find resources.</li>
+                  
                 </ul>
               </blockquote>              </td>
             <td width="39%" bgcolor="#FFFFFF"><div align="center"><a href="large-images/clay-classroom-large.jpg"><img src="large-images/clay-classroom-medium.jpg" alt="art clay classroom" width="297" height="227" border="4" /></a></div></td>
