--- a/resources.html
+++ b/resources.html
@@ -108,8 +108,8 @@ pageTracker._trackPageview();
               <blockquote>
                 <p ><strong><u>Art Resources for Children on the Kapiti Coast</u></strong></p>
                 <ul>
-                  <li class="Text"><strong>New</strong><br />
-                  Under Development: As I'm new to the Kapiti Coast I will be updating this as I find resources.</li>
+                  <li class="Text"><strong>Under Development</strong><br />
+                  As I'm new to the Kapiti Coast I will be updating this as I find resources.</li>
                   
                 </ul>
               </blockquote>              </td>
