--- a/resources.html
+++ b/resources.html
@@ -117,7 +117,7 @@ pageTracker._trackPageview();
           </tr>
           <tr>
             <td bgcolor="#FFFFFF"><blockquote>
-                <p ><strong><u>Art Resources for Children</u></strong></p>
+                <p ><strong><u>Art Resources for Children in Christchurch (2010)</u></strong></p>
                 <ul>
                   <li class="Text"><strong>COCA Art Classes</strong><br />
                   They continue to run classes at COCA gallery for children. Phone 03-366 7261.</li>
