--- a/abouthelen.html
+++ b/abouthelen.html
@@ -7,7 +7,7 @@
 <meta http-equiv=Content-Type content="text/html; charset=iso-8859-1" />
 <meta name="verify-v1" content="xDxxOc5PC+EeHD58cdmCeI94AbTkTEQ76XUw/1sB9Vg=" /> <!-- Google -->
 <meta content="Art Class Classes Helen Savage creative kids holiday programme adult children after school drawing painting printing sculpture design creativity fun" name=Keywords />
-<meta http-equiv=Description content="Creative Kids: I teach multi-media art classes after school every term of the school year and school holidays. These classes cater for students from 5 - 13 years and cover a broad range of art practices in 2D and 3D. - Helen Savage. Located in Christchurch, New Zealand" />
+<meta http-equiv=Description content="Creative Kids: I teach multi-media art classes after school every term of the school year and school holidays. These classes cater for students from 5 - 13 years and cover a broad range of art practices in 2D and 3D. - Helen Savage. Located in Raumati South, New Zealand" />
 
 <link href="main.css" rel="stylesheet" type="text/css">
 <meta content="MSHTML 6.00.2900.3268" name=GENERATOR />
@@ -51,7 +51,7 @@ pageTracker._trackPageview();
             </tr>
             <tr>
               <td valign=top height=40><div id=rpadding align=right>
-                  <div align=left class=style3>CHRISTCHURCH,&nbsp; NEW ZEALAND <span class=Title2> </span></SPAN>&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;<span class="style6"><strong>CLOSED&nbsp; FOR&nbsp; 2014</strong></span></div>
+                  <div align=left class=style3>RAUMATI SOUTH, KAPITI COAST</div>
                 </div></td>
             </tr>
           </tbody>
@@ -115,12 +115,12 @@ pageTracker._trackPageview();
           <tr>
             <td height="10" colspan="2" bgcolor="#FFFFFF"><blockquote>&nbsp;</blockquote></td>
             <td width="47%" height="10" rowspan="3" bgcolor="#FFFFFF"><div align="center">
-              <p><img src="images/helen-wax.JPG" alt="Helen Savage art tutor - classes for children, christchurch, nz" width="319" height="425" border="3" /></p>
+              <p><img src="images/helen-wax.JPG" alt="Helen Savage art tutor - classes for children, Raumati South, nz" width="319" height="425" border="3" /></p>
               <p class="Text"><em>preparing wax and melted coloured crayons</em></p>
             </div></td>
           </tr>
           <tr>
-            <td width="14%" bgcolor="#FFFFFF"><div align="center"><img src="images/Helen-sm.jpg" alt="Helen Savage, art tutor, art classes for children, christchurch, nz" width="77" height="113" border="1" /></div></td>
+            <td width="14%" bgcolor="#FFFFFF"><div align="center"><img src="images/Helen-sm.jpg" alt="Helen Savage, art tutor, art classes for children, Raumati South, nz" width="77" height="113" border="1" /></div></td>
             <td width="39%" valign="middle" bgcolor="#FFFFFF"><p class="Text">Having taught art classes consistently now for 7 years Helen has built up a repertoire of over 100 different classes with variations for different age groups and abilities.</p>
             </td>
           </tr>
@@ -145,13 +145,13 @@ pageTracker._trackPageview();
               <p>In 2002 Helen's &quot;<a href="HelensArt/marks_of_existence.htm">Marks of Existence</a>&quot; art work was exhibited at the Centre of Contemporary Art as part of their Emerging Artist Series. <a href="HelensArt/index.htm">Click here</a> for her other works.</p>
               <p>Helen began working in two areas - as an art tutor and as an art consultant for several Christchurch galleries. At these galleries she learned about local artists, the sale of art, framing  consultation, and installing and hosting exhibitions. As an art tutor she set up an art department at Floyds Creative Arts and in 2005 began teaching a children's art class at COCA.</p>
               <p>By 2008 this had evolved into teaching 5-6 art classes each week in the school term, plus several  classes each school holidays.</p>
-              <p>Helen has been enjoying  teaching so much that in February 2009 she began  studying for the <span class="Text-News">Graduate Diploma In Teaching at the Christchurch Teacher's College. </span></p>
+              <p>Helen has been enjoying  teaching so much that in February 2009 she began  studying for the <span class="Text-News">Graduate Diploma In Teaching at Canterbury University's Teacher's College. </span></p>
               <p><span class="Text-News">In 2010 Helen was relief teaching in  primary schools and also completed the acclaimed CELTA (Cambridge English Language Teaching for Adults) course.</span></p>
               <p><span class="Text-News">2011: Helen taught at Hong Kong Academy, a private international primary and secondary school in Hong Kong.</span></p>
               <p><span class="Text-News">2014: Art teacher at Yew Chung International School - an English language private school in Shanghai, China. Helen taught primary school art for 4 years in a multi-cultural setting with 14-17 classes per week.</span></p>      
-		<p><span class="Text-News">July 2018: Returned to New Zealand and living in Raumati, Paraparaumu, on the Kapiti coast.</span></p>
+		<p><span class="Text-News">July 2018: Returned to New Zealand and living in Raumati, Paraparaumu, on the Kapiti coast. Art classes starting soon!</span></p>
 		<p>&nbsp;</p>
-		<p><span class="Text-News">Last updated: 2011</span></p>      
+		<p><span class="Text-News">Last updated: Feb 11th, 2019</span></p>      
               <hr />
               <p>&nbsp;</p>
               <p>&nbsp;</p>
@@ -161,7 +161,7 @@ pageTracker._trackPageview();
         <!-- InstanceEndEditable -->
         
         <table width="100%" border="0" height=40 valign=middle background="images/bot-strip.png">
-  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Christchurch, NZ</span> </div></td>
+  		    	<td><div align=center> <span class="Text">Creative Kids&nbsp;&nbsp; &copy; Helen Savage 2008 </span>						<br />                  <span class="quotestart">Raumati South, NZ</span> </div></td>
   				</table>
 
       <td valign=top width=30><img height=405 alt=background 
