--- a/abouthelen.html
+++ b/abouthelen.html
@@ -121,7 +121,7 @@ pageTracker._trackPageview();
           </tr>
           <tr>
             <td width="14%" bgcolor="#FFFFFF"><div align="center"><img src="images/Helen-sm.jpg" alt="Helen Savage, art tutor, art classes for children, Raumati South, nz" width="77" height="113" border="1" /></div></td>
-            <td width="39%" valign="middle" bgcolor="#FFFFFF"><p class="Text">Having taught art classes consistently now for 7 years Helen has built up a repertoire of over 100 different classes with variations for different age groups and abilities.</p>
+            <td width="39%" valign="middle" bgcolor="#FFFFFF"><p class="Text">Having taught art classes consistently now for 11+ years Helen has built up a repertoire of hundreds of different classes with variations for different age groups and abilities.</p>
             </td>
           </tr>
           <tr>
