--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Creative Kids : art classes for children with Helen Savage</title>
 	<!-- InstanceEndEditable -->
 <meta http-equiv=Content-Type content="text/html; charset=iso-8859-1" />
+<meta name="google-site-verification" content="A-YFDdZJqtFtsqD6hwv7UNiOanjFqG0pAg783w0AItE" />
 <meta name="verify-v1" content="xDxxOc5PC+EeHD58cdmCeI94AbTkTEQ76XUw/1sB9Vg=" /> <!-- Google -->
 <meta content="Art Class Classes Helen Savage creative kids holiday programme adult children after school drawing painting printing sculpture design creativity fun" name=Keywords />
 <meta http-equiv=Description content="Creative Kids: I teach multi-media art classes after school every term of the school year and school holidays. These classes cater for students from 5 - 13 years and cover a broad range of art practices in 2D and 3D. - Helen Savage. Located in Christchurch, New Zealand" />
