--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/main-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<!-- InstanceBeginEditable name="doctitle" -->
-	<title>Creative Kids : art classes for children with Helen Savage</title>
+<link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+	<!-- InstanceBeginEditable name="doctitle" -->
+<title>Creative Kids : art classes for children with Helen Savage</title>
 	<!-- InstanceEndEditable -->
 <meta http-equiv=Content-Type content="text/html; charset=iso-8859-1" />
 <meta name="google-site-verification" content="A-YFDdZJqtFtsqD6hwv7UNiOanjFqG0pAg783w0AItE" />
